@@ -24,6 +24,7 @@ PostGIS 1.0.5CVS
 	- New "Reporting Bugs" chapter in manual
 	- Segfault fix in shp2pgsql (utf8 encoding)
 	- Fixed computation of null values fraction in analyzer
+	- Fixed return code of shp2pgsql
 
 PostGIS 1.0.4
 2005/09/09
